# django-admin-sbf

./: .gitignore  MANIFEST.in  README.rst  setup.cfg
django_admin_sbf/: admin.py  admin_forms.py  apps.py
django_admin_sbf/templates/admin/: custom_search_form.html  sbf_custom_change_list.html
django_admin_sbf/templatetags/: custom_search_form.py
