[metadata]
name = django-admin-sbf
version = 0.4
description = A Django admin app to search by specific field instead of all fields
long_description = file: README.rst
url = https://github.com/anuj9196/django-admin-sbf
author = Anuj Sharma
author_email = contact@anujs.in
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
